for nikola 2